Updated Posts Front End || TODO: debug comment button

--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -19,13 +19,19 @@
             <div id="view-post">
                 <section class="post"></section>
                 <section class="comments"></section>
+                <div id="no-comments" class="hide">
+                    <p>0 comments.</p>
+                </div>
+                <section>
+                    <button class="btn" id="add-comment-button">Add Comment</button>
+                </section>
             </div>
 
             <!-- To edit the post -->
             <form id="post-form" class="hide"></form>
 
-            <!-- TODO: Add the comments associated with this blog below: -->
-
+            <!-- To edit the comment -->
+            <form id="comment-form" class="hide"></form>
 
 
         </main>
